<resources xmlns:tools="http://schemas.android.com/tools">


    <!--Titles-->
    <string name="app_name">Paragliding GPS</string>
    <string name="title_activity_settings">ActivitySettings</string>
    <string name="title_navigation">Navigation</string>
    <string name="title_waypoints">Waypoints</string>
    <string name="title_route">Route</string>
    <string name="title_flights">Flights</string>
    <string name="title_add_waypoint">New Waypoint</string>
    <string name="title_edit_flight">Edit flight</string>
    <string name="TAG">DEBUG-INFO</string>
    <!--Titles-->

    <!--Navigation-->
    <string name="settings">Settings</string>
    <string name="btn_On">Stop</string>
    <string name="btn_Off">Start</string>
    <string name="snap_compass">Tracking device compass</string>
    <string name="snap_north">GPS north blocked</string>
    <string name="snap_saved_flight">Flight saved</string>

    <string name="altitude_m">Altitude (m)</string>
    <string name="altitude_ft">Altitude (ft)</string>

    <string name="speed_ms">Speed (m/s)</string>
    <string name="speed_kmh">Speed (km/h)</string>
    <string name="speed_mph">Speed (mph)</string>
    <string name="speed_kt">Speed (kt)</string>

    <string name="distance_km">Distance (km)</string>
    <string name="distance_mi">Distance (mi)</string>
    <string name="distance_nm">Distance (nm)</string>

    <string name="distance_wpt_km">Distance WPT(km)</string>
    <string name="distance_wpt_mi">Distance WPT(mi)</string>
    <string name="distance_wpt_nm">Distance WPT(nm)</string>
    <string name="chronometer">Chronometer (mm:ss)</string>

    <string name="time_to_wpt">Time to WPT (\')</string>
    <!--Navigation-->

    <!--Route-->
    <string name="route_subtitle">Select a waypoint or tap the map</string>
    <string name="btn_direct_to">Direct to</string>
    <string name="btn_clear_route">Clear route</string>
    <string name="snap_route_seted">Established route</string>
    <string name="snap_route_cleared">Route cleared</string>
    <!--Route-->

    <!--Flights-->
    <string name="flights_count_label">Flights</string>
    <string name="hours_count_label">Flight hours</string>
    <!--Flights-->


    <!--Flight Detail-->
    <string name="duration_label">Duration (hh:mm:ss)</string>

    <string name="min_altitude_m">Min. Altitude (m)</string>
    <string name="max_altitude_m">Max. Altitude (m)</string>

    <string name="min_altitude_ft">Min. Altitude (ft)</string>
    <string name="max_altitude_ft">Max. Altitude (ft)</string>

    <string name="min_speed_kmh">Min. Speed (km/h)</string>
    <string name="avg_speed_kmh">Avg. Speed (km/h)</string>
    <string name="max_speed_kmh">Max. Speed (km/h)</string>

    <string name="min_speed_ms">Min. Speed (m/s)</string>
    <string name="avg_speed_ms">Avg. Speed (m/s)</string>
    <string name="max_speed_ms">Max. Speed (m/s)</string>

    <string name="min_speed_mph">Min. Speed (mph)</string>
    <string name="avg_speed_mph">Avg. Speed (mph)</string>
    <string name="max_speed_mph">Max. Speed (mph)</string>

    <string name="min_speed_kt">Min. Speed (kt)</string>
    <string name="avg_speed_kt">Avg. Speed (kt)</string>
    <string name="max_speed_kt">Max. Speed (kt)</string>

    <string name="delete_dialog_tittle">Delete Flight</string>
    <string name="delete_dialog_msg">Are you sure you want to delete this flight?</string>
    <string name="delete_dialog_yes">Yes</string>
    <string name="delete_dialog_no">No</string>

    <string name="menu_edit">Edit</string>
    <!--Flight Detail-->


    <!--Edit Flight-->
    <string name="flight_info_label">Flight information</string>
    <string name="flight_info_speed_label">Speed</string>
    <string name="flight_info_altitude_label">Altitude</string>

    <string name="flight_name_label">Flight name</string>
    <string name="flight_date_label">Date</string>
    <string name="flight_hour_label">Hour</string>
    <string name="flight_duration_label">Duration</string>
    <!--Edit Flight-->


    <!--Waypoints-->
    <!--Waypoints-->

    <!--New Waypoint-->
    <string name="new_wtp_subtitle">Tap the map to add a waypoint</string>
    <string name="wpt_name">Waypoint name</string>
    <string name="name_required">Waypoint name required</string>
    <!--New Waypoint-->

    <!--Edit Waypoint-->
    <string name="delete_waypoint_tittle">Delete Waypoint</string>
    <string name="delete_waypoin_msg">Are you sure you want to delete this waypoint?</string>
    <string name="delete_waypoin_yes">Yes</string>
    <string name="delete_waypoin_no">No</string>
    <!--Edit Waypoint-->


    <!--Preference Title-->
    <string name="map_settings">Map settings</string>
    <string name="unit_settings">Units settings</string>
    <string name="osi_settings">On screen information</string>

    <string name="layer_title">Map Layer</string>
    <string name="space1_title">Space 1</string>
    <string name="space2_title">Space 2</string>
    <string name="space3_title">Space 3</string>
    <string name="space4_title">Space 4</string>
    <string name="speed_unit_title">Speed unit</string>
    <string name="altitude_unit_title">Altitude unit</string>
    <string name="distance_unit_title">Distance unit</string>
    <!--Preference Title-->

    <!--Preference Keys-->
    <string name="layer_key">layer</string>
    <string name="space1_key" tools:ignore="Typos">space1</string>
    <string name="space2_key">space2</string>
    <string name="space3_key">space3</string>
    <string name="space4_key">space4</string>
    <string name="speed_unit_key">speed_unit</string>
    <string name="altitude_unit_key">altitude_unit</string>
    <string name="distance_unit_key">distance_unit</string>
    <!--Preference Keys-->

    <string name="mapbox_access_token" tools:ignore="Typos">pk.eyJ1IjoiZGF2aWR0cnVqaSIsImEiOiJja2N5eHk1azQwZWNwMnVwNGdhdmI0NjFjIn0.fmvbTZB2ja54sltI3znqZA</string>
    <string name="user_location_permission_explanation">Location access needed</string>
    <string name="user_location_permission_not_granted">No location access</string>

</resources>